fix: WelcomeMessage removed deprecated usage